# quokka

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile
examples/: inference.py  train.py
src/quokka/: __init__.py  config.py  data.py  model.py  optimizers.py  text_generation.py  trainer.py  transformer.py  utils.py
